--- a/ASPTraining/ASPTraining.csproj
+++ b/ASPTraining/ASPTraining.csproj
@@ -160,12 +160,24 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ImprovementsController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201410101158213_InitialCreate.cs" />
+    <Compile Include="Migrations\201410101158213_InitialCreate.Designer.cs">
+      <DependentUpon>201410101158213_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201410101209483_addstatus.cs" />
+    <Compile Include="Migrations\201410101209483_addstatus.Designer.cs">
+      <DependentUpon>201410101209483_addstatus.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\ApplicationDBContext.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Improvement.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -229,6 +241,11 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Improvements\Create.cshtml" />
+    <Content Include="Views\Improvements\Delete.cshtml" />
+    <Content Include="Views\Improvements\Details.cshtml" />
+    <Content Include="Views\Improvements\Edit.cshtml" />
+    <Content Include="Views\Improvements\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -239,6 +256,14 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201410101158213_InitialCreate.resx">
+      <DependentUpon>201410101158213_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201410101209483_addstatus.resx">
+      <DependentUpon>201410101209483_addstatus.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
