--- a/ASPTraining.Tests/packages.config
+++ b/ASPTraining.Tests/packages.config
@@ -1,8 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.2" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
+  <package id="EntityFrameworkTesting" version="1.0.7" targetFramework="net45" />
+  <package id="EntityFrameworkTesting.Moq" version="1.0.7" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Moq" version="4.2.1408.0717" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
+  <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
+  <package id="Unity.Mvc" version="3.5.1404.0" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
 </packages>
