--- a/ASPTraining/ASPTraining.csproj
+++ b/ASPTraining/ASPTraining.csproj
@@ -197,9 +197,14 @@
     <Compile Include="Migrations\201410101209483_addstatus.Designer.cs">
       <DependentUpon>201410101209483_addstatus.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201410152042580_addComments.cs" />
+    <Compile Include="Migrations\201410152042580_addComments.Designer.cs">
+      <DependentUpon>201410152042580_addComments.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDBContext.cs" />
+    <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Improvement.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -289,6 +294,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201410101209483_addstatus.resx">
       <DependentUpon>201410101209483_addstatus.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201410152042580_addComments.resx">
+      <DependentUpon>201410152042580_addComments.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
