Attempt at an alternative dal repo

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\ASPTraining.Tests\packages.config" />
   <repository path="..\ASPTraining\packages.config" />
+  <repository path="..\DAL\packages.config" />
 </repositories>
