--- a/ASPTraining/ASPTraining.csproj
+++ b/ASPTraining/ASPTraining.csproj
@@ -62,6 +62,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -186,6 +188,30 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ImprovementsController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="DAL\ASPTraining.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ASPTraining.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DAL\ASPTraining.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ASPTraining.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DAL\ASPTraining.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ASPTraining.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="DAL\Comment.cs">
+      <DependentUpon>ASPTraining.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DAL\Improvement.cs">
+      <DependentUpon>ASPTraining.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DAL\Status.cs">
+      <DependentUpon>ASPTraining.tt</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -213,6 +239,10 @@
     <Compile Include="Migrations\201410181051510_MatchKeyCasing.Designer.cs">
       <DependentUpon>201410181051510_MatchKeyCasing.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201410181440305_InterfacingEverything.cs" />
+    <Compile Include="Migrations\201410181440305_InterfacingEverything.Designer.cs">
+      <DependentUpon>201410181440305_InterfacingEverything.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDBContext.cs" />
@@ -221,6 +251,7 @@
     <Compile Include="Models\Improvement.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\DALImprovementRepository.cs" />
     <Compile Include="Repositories\IImprovementsRepository.cs" />
     <Compile Include="Repositories\ImprovementsRepository.cs" />
     <Compile Include="Startup.cs" />
@@ -234,6 +265,23 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <EntityDeploy Include="DAL\ASPTraining.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>ASPTraining.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="DAL\ASPTraining.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ASPTraining.edmx</DependentUpon>
+      <LastGenOutput>ASPTraining.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="DAL\ASPTraining.edmx.diagram">
+      <DependentUpon>ASPTraining.edmx</DependentUpon>
+    </Content>
+    <Content Include="DAL\ASPTraining.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ASPTraining.edmx</DependentUpon>
+      <LastGenOutput>ASPTraining.cs</LastGenOutput>
+    </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -319,6 +367,18 @@
     <EmbeddedResource Include="Migrations\201410181051510_MatchKeyCasing.resx">
       <DependentUpon>201410181051510_MatchKeyCasing.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201410181440305_InterfacingEverything.resx">
+      <DependentUpon>201410181440305_InterfacingEverything.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DAL\DAL.csproj">
+      <Project>{d4a8d356-3eac-48d4-abcd-880518dd5977}</Project>
+      <Name>DAL</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
