--- a/ASPTraining/Web.config
+++ b/ASPTraining/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=.;Database=ASPTraining;User Id=webdirecta;Password=directaweb;" providerName="System.Data.SqlClient" />
+    <add name="ASPTrainingEntities" connectionString="metadata=res://*/DAL.ASPTraining.csdl|res://*/DAL.ASPTraining.ssdl|res://*/DAL.ASPTraining.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=ASPTraining;user id=webdirecta;password=directaweb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
