--- a/ASPTraining/ASPTraining.csproj
+++ b/ASPTraining/ASPTraining.csproj
@@ -62,6 +62,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -213,6 +215,10 @@
     <Compile Include="Migrations\201410181051510_MatchKeyCasing.Designer.cs">
       <DependentUpon>201410181051510_MatchKeyCasing.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201410181657114_anotherhiddenchange.cs" />
+    <Compile Include="Migrations\201410181657114_anotherhiddenchange.Designer.cs">
+      <DependentUpon>201410181657114_anotherhiddenchange.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDBContext.cs" />
@@ -220,6 +226,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Improvement.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Status.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IImprovementsRepository.cs" />
     <Compile Include="Repositories\ImprovementsRepository.cs" />
@@ -318,6 +325,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201410181051510_MatchKeyCasing.resx">
       <DependentUpon>201410181051510_MatchKeyCasing.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201410181657114_anotherhiddenchange.resx">
+      <DependentUpon>201410181657114_anotherhiddenchange.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
