--- a/ASPTraining/Web.config
+++ b/ASPTraining/Web.config
@@ -10,6 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=.;Database=ASPTraining;User Id=webdirecta;Password=directaweb;" providerName="System.Data.SqlClient" />
+    <add name="dal" connectionString="data source=.;initial catalog=ASPTraining;user id=webdirecta;password=directaweb;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="dal2" connectionString="data source=.;initial catalog=ASPTraining;user id=webdirecta;password=directaweb;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
